--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html><html lang="es"><head> <meta charset="utf-8"> <title>Este es mi portfolio en GitHub Pages!!!</title> <style media="screen"> body{font-family: sans-serif;}h1{color: rgb(192, 0, 0);}.wrapper{margin: 0 auto; max-width: 768px;}</style></head><body> <div class="wrapper"> <h1>Bienvenidxs a mi Portfolio</h1> <p>Por primera vez estoy trabajando con Git como sistema de control de versiones</p><p>Además, he conseguido poner en marcha mi portfolio utilizando GitHub Pages</p></div></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title></title>
+<link rel="stylesheet" href="styles/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+</head>
+<body>
+<div class="wrapper">
+<header>
+<h1>Luisa Bernal</h1>
+<img src="media/flores.jpg" alt="flores" width="100%">
+</header>
+<nav>
+<li>
+<ul><a href="#">Home</a></ul>
+<ul><a href="#">Porfolio</a></ul>
+<ul><a href="#">Contacto</a></ul>
+</li>
+</nav>
+<article>
+<section>
+    <div class="container">
+<h1>Luisa Bernal, periodista</h1>
+<p class="firstParagraph">Datos de contacto:</p>
+<ul>
+    <li>
+<p>e-mail: luisabernalmontoya@gmail.com</p>
+</li>
+<li>
+<a href="https://twitter.com/luisabernalm">Twitter</a>
+</li>
+</ul>
+</div>
+</section>
+</article>
+<footer>· Año 2020 · Todos los derechos reservados · UNIR&copy; ·</footer>
+</div>
+</body>
+</html>
